ajustes - ainda precisa ver o async